# sso-tools

./: .woodpecker.yml  README.md  docker-compose.yml  samlpResponse.xml
api/: Dockerfile  app.py  pyproject.toml
api/.chalice/: config.json  policy-prod.json
api/.chalice/deployed/: prod.json
api/.github/workflows/: main.yml
api/chalicelib/api/: accounts.py  idps.py  sps.py  users.py
api/chalicelib/util/: database.py  util.py
idp/: Dockerfile  README.md  database.js  envfile  idp.js  index.js  package.json
sp/: Dockerfile  index.js  package.json  sp.js
sp/views/: config.ejs  dashboard.ejs
web/: .example.env  Dockerfile  README.md  default.conf  index.html  package.json  vite.config.js
web/.github/workflows/: main.yml
web/public/: index.html
web/src/: App.vue  main.js  spApi.js
web/src/components/: Account.vue  Dashboard.vue  HelloWorld.vue  Home.vue  IDP.vue  IdpHome.vue  IdpLogs.vue  IdpOauth.vue  IdpOauthGuide.vue  IdpOauthLogs.vue  IdpSaml.vue  IdpSaml2Guide.vue  IdpSamlLogs.vue  IdpSettings.vue  IdpSps.vue  IdpUsers.vue  NewIDP.vue  NewSP.vue  SP.vue  SpHome.vue
web/src/components/legal/: PrivacyPolicy.vue  TermsOfUse.vue
